# trivo

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  TRIVO_3_0_FEATURES.md  vcpkg.json
.github/workflows/: build.yml
resources/: Info.plist  resources.qrc  trivo.desktop  trivo.rc
src/: main.cpp
src/core/: AnimationPlayer.cpp  AnimationPlayer.h  Camera.cpp  Camera.h  LightSystem.cpp  LightSystem.h  MainWindow.cpp  MainWindow.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Viewport.cpp  Viewport.h
src/i18n/: I18n.cpp  I18n.h
src/ui/: AboutDialog.cpp  AboutDialog.h  DropOverlay.cpp  DropOverlay.h  InfoPanel.cpp  InfoPanel.h  ScenePanel.cpp  ScenePanel.h  Sidebar.cpp  Sidebar.h  SkyboxPanel.cpp  SkyboxPanel.h  TexturePanel.cpp  TexturePanel.h  ToolBar.cpp  ToolBar.h  ToolsPanel.cpp  ToolsPanel.h
src/utils/: FileUtils.cpp  FileUtils.h  IconProvider.cpp  IconProvider.h
